# Js--Compiler

./: CMakeLists.txt  README.md  a.cpp  a.out  analizador_lexico  analizador_lexico.cpp  analizador_lexico.testcases  compile_commands.json  ejemplo.jsm  gramatica-sintactico.txt  id_rsa  id_rsa.pub  token.txt  tokens.txt
.cache/clangd/index/: Analizador_Sintactico.cpp.BB7B23342E17082C.idx  Analizador_Sintactico.cpp.DB1CB037B47CE9A6.idx  Analizador_Sintactico.h.9CDB988A21DD3734.idx  Analizador_Sintactico.h.C55AB116FFB884E0.idx  ColaTablaSimbolos.cpp.11DC50CEC50DDE9E.idx  ColaTablaSimbolos.cpp.AF6331F5F4992D82.idx  ColaTablaSimbolos.h.380DE121625DE021.idx  ColaTablaSimbolos.h.DF9BA965E500A7D8.idx  Generator.h.89773C57B325D9CC.idx  Generator.h.F2FE4F26AC93EE6F.idx  Gestor_Errores.cpp.54626178FD2D33E1.idx  Gestor_Errores.cpp.62BEE4ED9150DFDE.idx  Gestor_Errores.h.1114ECFCE9C859C2.idx  Gestor_Errores.h.64399404032E27D2.idx  TablaSimbolos.cpp.5CBBF32107484CA9.idx  TablaSimbolos.cpp.CACFEE67194B2E3E.idx  TablaSimbolos.h.4649A91628C73EBD.idx  TablaSimbolos.h.E62702553CA32FCE.idx  (+9 more)
Js--Compiler/: Generator.h  README.md  a.out  analizador_lexico.h  principal.cpp  tokens.txt
include/: .Analizador_Sintactico.cpp.swp  Analizador_Sintactico.cpp  Analizador_Sintactico.h  ColaTablaSimbolos.cpp  ColaTablaSimbolos.h  Generator.h  Gestor_Errores.cpp  Gestor_Errores.h  TablaSimbolos.cpp  TablaSimbolos.h  TiposToken.h  analizador_lexico.cpp  analizador_lexico.h  ejemplo.jsm  principal.cpp
practica/: analizador_lexico  analizador_lexico.cpp  ejemplo.jsm  programa_ejemplo.jsm  tokens.txt
